# auto-loan-opportunity-cost

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  sp500_daily_close.db
.github/workflows/: ci.yml
car_loan_sim/: __init__.py  data.py  loan.py  plots.py  portfolio.py  simulator.py
notebooks/: car_loan_vs_invest.ipynb
tests/: test_data.py  test_dca.py  test_loan.py  test_simulator.py
